# photoconsistency-visual-odometry

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in
apps/: CMakeLists.txt
apps/PhotoconsistencyFrameAlignment/: CMakeLists.txt  PhotoconsistencyFrameAlignment.cpp
apps/PhotoconsistencyVisualOdometry/: CMakeLists.txt  PhotoconsistencyVisualOdometry.cpp
config_files/: config_3_level_optimization_ceres.yml  config_4_level_optimization_analytic.yml  config_4_level_optimization_ceres.yml  config_5_level_optimization_analytic.yml  config_5_level_optimization_ceres.yml  config_6_level_optimization_analytic.yml  config_only_level_0_analytic.yml  config_only_level_0_ceres.yml  config_only_level_1_ceres.yml  config_only_level_2_ceres.yml  config_only_level_3_ceres.yml  config_only_level_4_ceres.yml
phovo/Maxima/: derivatives_photoconsistency.wxm  derivatives_photoconsistency_separated_jacobians.wxm
phovo/include/: CCameraRecord.h  CDataBase.h  CDataSourceBase.h  CImageReader.h  CMultiSensorData.h  CMultiSensorDataSource.h  CPhotoconsistencyOdometry.h  CPhotoconsistencyOdometryAnalytic.h  CPhotoconsistencyOdometryBiObjective.h  CPhotoconsistencyOdometryCeres.h  CSensorData.h  CSensorDataSourceBase.h  CSensorIdentifier.h  CSensorRecordBase.h  Matrix.h  config.h
